finishing baby index

--- a/FlaskWebProject/templates/index.html
+++ b/FlaskWebProject/templates/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - My Flask Application</title>
     <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
-    <script src="/static/scripts/modernizr-2.6.2.js"></script>
 </head>
+
+<body>
+    <h1>{{ title }}</h1>
+</body>
 
